Resolve spacing for results, add padding to header, add top right menu

--- a/google-serp.css
+++ b/google-serp.css
@@ -14,52 +14,117 @@
     position: relative;
     height: auto;
     width: auto;
-    min-width: 35%;
+    min-width: 50%;
     border-width: 1px;
     border-color: darkgray;
     margin: 7px 10% 5px 0;
 }
 
-#footer-menu {
-
+.settings-apps-sign-in {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: float;
+    float: right;
 }
 
-#page-numbers {
-    
+#top-menu-list {
+    display: inline-grid;
+    vertical-align: center;
 }
 
-.ad-label {
-
+#sign-in {
+    background-color: blue;
+    color: white;
+    padding: 10px 20px 10px 20px;
+    border-width: 0;
+    border-radius: 10%;
 }
 
 .url {
-
+    color: rgb(32,33,36);
+    font-size: 14px;
+    padding: 0 0 5px 0;
+    line-height: 18px;
+    margin: 0;
 }
 
 .breadcrumbs {
-
+    color: rgb(95,99,104);
+    font-size:  14px;
+    line-height: 18px;
+    padding: 0 0 5px 0;
+    margin: 0;
 }
 
 .title {
-
+    color: rgb(26,13,171);
+    font-size: 20px;
+    padding: 0 0 3px 0;
+    margin: 0;
+    line-height: 24px;
 }
 
 .meta {
+    color: rgb(77,81,86);
+    font-size: 14px;
+    padding: 0;
+    margin: 0;
+    line-height: 18px;
+}
 
+.result {
+    margin: 0 0 30px 0;
+    padding: 0 0 0 18%;
 }
 
 header {
-
+    margin: 0;
+    padding: 20px 0 40px 0;
 }
 
 footer {
-
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #f2f2f2;
+    text-align: center;
+    padding: 25px 0 25px 0;
+    font-size: 14px;
 }
 
-ul {
-
+#next-page {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    text-align: center;
 }
 
-li {
+#page-number {
+    display: inline-grid;
+    justify-content: center;
+    vertical-align: center;
+    color: rgb(26,13,171);
+    font-size: 14px;
+    padding-left: 2%;
+}
 
+#footer-li {
+    display: float;
+    float: left;
+    vertical-align: center;
+    color: rgba(0, 0, 0, 0.87);
+    font-size: 14px;
+    padding-left: 2%;
+}
+
+#footer-menu {
+    list-style-type: none;
+    margin: 0;
+    padding: 0 0 0 23%;
+}
+
+body {
+    font-family: arial, sans-serif;
 }
